[package]
name = "rch"
description = "ChatGPT CLI"
version = "0.2.0"
edition = "2021"
authors = ["sicDoug"]
repository = "https://github.com/sicDoug/ch"
license = "MIT"

[[bin]]
name = "ch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
dirs = "5.0.1"
